--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>«BikeGang»</h1>
-        <p>Товарищ! Мы рады тебя приветствовать на сайте лучшего веломагазина</p>
+        <p>Товарищ! Мы рады тебя приветствовать на сайте лучшего веломагазина.</p>
         <h2>Что же это за магазин такой?</h2>
         <p>Магазин, на самом деле, необычный! Ты не найдешь здесь велосипеда «на выходные в парк», 
             на наших велосипедах не катаются «вокруг клумбы». Ассортимент представлен отборный! 
