--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     </head>
     <body>
         <h1>«BikeGang»</h1>
+        <ul>
+            <li>
+                <a href="#">Главная</a>
+            </li>
+            <li>
+                <a href="#">Каталог</a>
+            </li>
+            <li>
+                <a href="#">Контакты</a>
+            </li>
+        </ul>
+        <hr>
         <p>Товарищ! Мы рады тебя приветствовать на сайте лучшего веломагазина.</p>
         <h2>Что же это за магазин такой?</h2>
         <p>Магазин, на самом деле, необычный! Ты не найдешь здесь велосипеда «на выходные в парк», 
