--- a/index.html
+++ b/index.html
@@ -55,6 +55,6 @@
         <br><br>
         <hr>
         <br>
-        © «BikeGang», 2016. All rights fucked!  
+        © «BikeGang», 2016. Все права защищены.
     </body>
 </html>
