Добавил новые страницы, подправил старые

--- a/products/giant-reign-1.html
+++ b/products/giant-reign-1.html
@@ -5,15 +5,27 @@
         <title>Giant Reign 1 (2016)</title>
     </head>
     <body>
+        <ul>
+            <li>
+                <a href="../index.html">Главная</a>
+            </li>
+            <li>
+                <a href="../catalog.html">Каталог</a>
+            </li>
+            <li>
+                <a href="../contacts.html">Контакты</a>
+            </li>
+        </ul>
+        <hr>
         <h1>Giant Reign 1 (2016)</h1>
-        <img src="../img/reign-275-1.jpg" width="480px" alt="Giant Reign 1 (2016)">
+        <a href="../img/reign-275-1.jpg" target="_blank">
+            <img src="../img/reign-275-1.jpg" width="480px" alt="Giant Reign 1 (2016)">
+        </a>
         <h2>Описание товара</h2>
-        <p>
-            В основе этого агрессивного велосипеда лежит ALUXX SL-рама, переработанная с нуля 
-            под 27.5-дюймовую технологию колеса. Фреймсет Reign 27.5 задает технологиям 
-            аллюминиевых полно-подвесных велосипедов новую планку веса, прочности и производительности, 
-            используя максимум от этого превосходного размера колеса.
-        </p>
+        <p>В&nbsp;основе этого агрессивного велосипеда лежит ALUXX&nbsp;SL-рама, переработанная с&nbsp;нуля
+        под 27.5-дюймовую технологию колеса. Фреймсет Reign&nbsp;27.5 задает технологиям аллюминиевых
+        полно-подвесных велосипедов новую планку веса, прочности и&nbsp;производительности,
+        используя максимум от&nbsp;этого превосходного размера колеса.</p>
         <h2>Характеристики товара</h2>
         <ul>
             <h3>Рама</h3>
@@ -48,11 +60,11 @@
                 и более длинную колесную базу для бескомпромиссной езды</li>
             <li>Воздушный или пружинный амортизатор в зависимости от конструкции рамы</li>
         </ul>
-        <p>Сколько весит этот велосипед? Это частозадаваемый и правильный вопрос. 
-            Но на самом деле в велосипедной промышленности нет единых стандартов для измерения веса велосипедов, 
-            и это часто приводит к дезинформации. Общий вес велосипеда варьируется в зависимости от размера, 
-            материала рамы, покраски, навесного оборудования и т.д. Мы в Giant считаем, что единственный верный способ 
-            узнать точный вес того или иного велосипеда - обратиться в ближайший магазин Giant.</p>
+        <p>Сколько весит этот велосипед? Это частозадаваемый и&nbsp;правильный вопрос. Но&nbsp;на&nbsp;самом деле
+        в&nbsp;велосипедной промышленности нет единых стандартов для измерения веса велосипедов, и&nbsp;это часто приводит
+        к&nbsp;дезинформации. Общий вес велосипеда варьируется в&nbsp;зависимости от&nbsp;размера, материала рамы, покраски,
+        навесного оборудования и&nbsp;т.д. Мы&nbsp;в&nbsp;Giant считаем, что единственный верный способ узнать точный вес
+        того или иного велосипеда&nbsp;&mdash; обратиться в&nbsp;ближайший магазин Giant.</p>
         <br><br>
         <hr>
         <br>
