--- a/index.html
+++ b/index.html
@@ -2,59 +2,38 @@
 <html lang="ru">
     <head>
         <meta charset="UTF-8">
-        <title>«Велобанда»</title>
+        <title>&laquo;Велобанда&raquo;</title>
     </head>
     <body>
-        <h1>«BikeGang»</h1>
         <ul>
             <li>
                 <a href="#">Главная</a>
             </li>
             <li>
-                <a href="#">Каталог</a>
+                <a href="catalog.html">Каталог</a>
             </li>
             <li>
-                <a href="#">Контакты</a>
+                <a href="contacts.html">Контакты</a>
             </li>
         </ul>
         <hr>
+        <h1>BikeGang</h1>
         <p>Товарищ! Мы рады тебя приветствовать на сайте лучшего веломагазина.</p>
-        <h2>Что же это за магазин такой?</h2>
-        <p>Магазин, на самом деле, необычный! Ты не найдешь здесь велосипеда «на выходные в парк», 
-            на наших велосипедах не катаются «вокруг клумбы». Ассортимент представлен отборный! 
-            Мы продаем велосипеды тем, кто не ищет компромиссов, тем, кому нужны качество и надежность.
-            Наши клиенты - люди, которые имеют велосипеды «в хвост и в гриву» и не могут себе позволить
-            слабое звено в конструкциях и механизмах!
-        <h2>Чем мы не являемся?</h2>
-        <p>Важно, чтобы ты понимал, что мы не «еще один» веломагазин! Мы вообще можем тебе ничего не продать,
-            если нам покажется ты не достоен нашего товара! Без обид, бро!</p>
-        <h2>Возможность заказать любой товар онлайн</h2>
-        <p>Заказывайте любой товар, который есть в наличии, даже не выходя из дома и оплачивайте любым удобным для вас способом. 
-            Наши менеджеры сами свяжутся с вами и ответят на все вопросы, а после оплаты заказа, 
-            тщательно упакуют ваш товар и отправят его в любую точку России!</p>
         <h2>Почему нам доверяют?</h2> 
         <h3>Комплектующие от топовых производителей</h3>
         <img src="img/producers.jpg" width="480px" alt="Круто!">
-        <p>Мы являемся официальным дилером многих известных брендов, поставляющих запчасти, в том числе редкие и топовые. 
-            Поэтому в качестве и надежности нашего товара нет никаких сомнений.</p> 
+        <p>Мы&nbsp;являемся официальным дилером многих известных брендов, поставляющих запчасти, в&nbsp;том числе редкие и&nbsp;топовые. Поэтому в&nbsp;качестве и&nbsp;надежности нашего товара нет никаких сомнений.</p>
         <h3>Пожизненная гарантия</h3>
-        <p>Если вы покупаете велосипед в одном из наших магазинов, вы получаете пожизненную гарантию на раму. 
-            Например, если она треснула в момент использования, мы заменим её на новую, 
-            при этом все работы по снятию/установке комплектующих будут бесплатными.</p>
+        <p>Если вы&nbsp;покупаете велосипед в&nbsp;одном из&nbsp;наших магазинов, вы&nbsp;получаете пожизненную гарантию на&nbsp;раму. Например, если она треснула в&nbsp;момент использования, мы&nbsp;заменим её&nbsp;на&nbsp;новую, при этом все работы по&nbsp;снятию/установке комплектующих будут бесплатными.</p>
         <h3>Бесплатный сервис</h3>
-        <p>Все велосипеды, лыжи и сноуборды, купленные в «BikeGang», обслуживаются бесплатно в течение всего срока эксплуатации. 
-            Обращайтесь к нам с любой проблемой, и наши мастера исправят все дефекты качественно и быстро! 
-            Для ТО мы используем новейшее оборудование от известных производителей Park Tool и Wintersteiger.</p>
+        <p>Все велосипеды, лыжи и&nbsp;сноуборды, купленные в&nbsp;&laquo;BikeGang&raquo;, обслуживаются бесплатно в&nbsp;течение всего срока эксплуатации. Обращайтесь к&nbsp;нам с&nbsp;любой проблемой, и&nbsp;наши мастера исправят все дефекты качественно и&nbsp;быстро! Для ТО&nbsp;мы&nbsp;используем новейшее оборудование от&nbsp;известных производителей Park Tool и&nbsp;Wintersteiger.</p>
         <h3>Профессиональная помощь</h3>
-        <p>В магазинах «BikeGang» работают высококвалифицированные специалисты, настоящие фанаты своего дела, 
-            которые и сами увлечены активным спортом, а потому отлично понимают ваши потребности и всегда знают, как помочь. 
-            Они с радостью проконсультируют вас, помогут выбрать любой товар и дадут советы по уходу за ним.</p>
+        <p>В&nbsp;магазинах &laquo;BikeGang&raquo; работают высококвалифицированные специалисты, настоящие фанаты своего дела, которые и&nbsp;сами увлечены активным спортом, а&nbsp;потому отлично понимают ваши потребности и&nbsp;всегда знают, как помочь. Они с&nbsp;радостью проконсультируют вас, помогут выбрать любой товар и&nbsp;дадут советы по&nbsp;уходу за&nbsp;ним.</p>
         <h3>Специальные условия для клиентов магазина</h3>
-        <p>«Велобанда» любит и заботится о своих клиентах. Поэтому мы постоянно устраиваем акции и 
-            предоставляем особые условия нашим клиентам.</p>
+        <p>&laquo;Велобанда&raquo; любит и&nbsp;заботится о&nbsp;своих клиентах. Поэтому мы&nbsp;постоянно устраиваем акции и&nbsp;предоставляем особые условия нашим клиентам.</p>
         <br><br>
         <hr>
         <br>
-        © «BikeGang», 2016. Все права защищены.
+        &copy; &laquo;BikeGang&raquo;, 2016. Все права защищены.
     </body>
 </html>
