Подключен стилевой файл ко всем страницам, а также шрифт

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>&laquo;Велобанда&raquo;</title>
+        <link rel="stylesheet" href="css/style.css">
+        <link href="https://fonts.googleapis.com/css?family=PT+Serif&subset=cyrillic-ext" rel="stylesheet">
     </head>
     <body>
         <ul>
@@ -16,12 +18,11 @@
                 <a href="contacts.html">Контакты</a>
             </li>
         </ul>
-        <hr>
         <h1>BikeGang</h1>
         <p>Товарищ! Мы рады тебя приветствовать на сайте лучшего веломагазина.</p>
-        <h2>Почему нам доверяют?</h2> 
+        <h2>Почему мы лучшие?</h2>
         <h3>Комплектующие от топовых производителей</h3>
-        <img src="img/producers.jpg" width="480px" alt="Круто!">
+        <img src="img/manufacturers.jpg" width="480px" alt="Manufacturer's list" title="Круто!">
         <p>Мы&nbsp;являемся официальным дилером многих известных брендов, поставляющих запчасти, в&nbsp;том числе редкие и&nbsp;топовые. Поэтому в&nbsp;качестве и&nbsp;надежности нашего товара нет никаких сомнений.</p>
         <h3>Пожизненная гарантия</h3>
         <p>Если вы&nbsp;покупаете велосипед в&nbsp;одном из&nbsp;наших магазинов, вы&nbsp;получаете пожизненную гарантию на&nbsp;раму. Например, если она треснула в&nbsp;момент использования, мы&nbsp;заменим её&nbsp;на&nbsp;новую, при этом все работы по&nbsp;снятию/установке комплектующих будут бесплатными.</p>
