--- a/products/giant-reign-1.html
+++ b/products/giant-reign-1.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Giant Reign 1 (2016)</title>
+        <link rel="stylesheet" href="css/style.css">
+        <link href="https://fonts.googleapis.com/css?family=PT+Serif&subset=cyrillic-ext" rel="stylesheet">
     </head>
     <body>
         <ul>
