Убрал меркеры списка. Задал стиль для всез ссылок меню.

--- a/contacts.html
+++ b/contacts.html
@@ -7,18 +7,19 @@
         <link href="https://fonts.googleapis.com/css?family=PT+Serif&subset=cyrillic-ext" rel="stylesheet">
     </head>
     <body>
-        <ul>
-            <li>
-                <a href="index.html">Главная</a>
-            </li>
-            <li>
-                <a href="catalog.html">Каталог</a>
-            </li>
-            <li>
-                <a href="#">Контакты</a>
-            </li>
-        </ul>
-        <hr>
+        <nav class="main-menu">
+            <ul>
+                <li>
+                    <a href="index.html">Главная</a>
+                </li>
+                <li>
+                    <a href="catalog.html">Каталог</a>
+                </li>
+                <li>
+                    <a href="#">Контакты</a>
+                </li>
+            </ul>
+        </nav>
         <h2>Напишите нам</h2>
         <form action="http://geekbrains.ru" method="post" enctype="multipart/form-data">
             <fieldset>
