--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
         <link href="https://fonts.googleapis.com/css?family=PT+Serif&subset=cyrillic-ext" rel="stylesheet">
     </head>
     <body>
-        <ul>
-            <li>
-                <a href="#">Главная</a>
-            </li>
-            <li>
-                <a href="catalog.html">Каталог</a>
-            </li>
-            <li>
-                <a href="contacts.html">Контакты</a>
-            </li>
-        </ul>
+        <nav class="main-menu">
+            <ul>
+                <li>
+                    <a href="#">Главная</a>
+                </li>
+                <li>
+                    <a href="catalog.html">Каталог</a>
+                </li>
+                <li>
+                    <a href="contacts.html">Контакты</a>
+                </li>
+            </ul>
+        </nav>
         <h1>BikeGang</h1>
         <p>Товарищ! Мы рады тебя приветствовать на сайте лучшего веломагазина.</p>
         <h2>Почему мы лучшие?</h2>
