--- a/products/nukeproof-mega-team.html
+++ b/products/nukeproof-mega-team.html
@@ -7,18 +7,19 @@
         <link href="https://fonts.googleapis.com/css?family=PT+Serif&subset=cyrillic-ext" rel="stylesheet">
     </head>
     <body>
-        <ul>
-            <li>
-                <a href="../index.html">Главная</a>
-            </li>
-            <li>
-                <a href="../catalog.html">Каталог</a>
-            </li>
-            <li>
-                <a href="../contacts.html">Контакты</a>
-            </li>
-        </ul>
-        <hr>
+        <nav class="main-menu">
+            <ul>
+                <li>
+                    <a href="../index.html">Главная</a>
+                </li>
+                <li>
+                    <a href="../catalog.html">Каталог</a>
+                </li>
+                <li>
+                    <a href="../contacts.html">Контакты</a>
+                </li>
+            </ul>
+        </nav>
         <h1>Nukeproof Mega 275 Team (2016)</h1>
         <a href="../img/mega-275-team.jpg" target="_blank">
             <img src="../img/mega-275-team.jpg" width="480px" alt="Nukeproof Mega 275 Team (2016)" title="Nukeproof Mega 275 Team (2016)">
