--- a/catalog.html
+++ b/catalog.html
@@ -7,18 +7,19 @@
         <link href="https://fonts.googleapis.com/css?family=PT+Serif&subset=cyrillic-ext" rel="stylesheet">
     </head>
     <body>
-        <ul>
-            <li>
-                <a href="index.html">Главная</a>
-            </li>
-            <li>
-                <a href="#">Каталог</a>
-            </li>
-            <li>
-                <a href="contacts.html">Контакты</a>
-            </li>
-        </ul>
-        <hr>
+        <nav class="main-menu">
+            <ul>
+                <li>
+                    <a href="index.html">Главная</a>
+                </li>
+                <li>
+                    <a href="#">Каталог</a>
+                </li>
+                <li>
+                    <a href="contacts.html">Контакты</a>
+                </li>
+            </ul>
+        </nav>
         <h1>Каталог</h1>
         <img src="img/reign-275-1.jpg" alt="Giant Reign 1 (2016)" title="Giant Reign 1 (2016)" width="240"><br>
         <a href="products/giant-reign-1.html">Giant Reign 1 (2016)</a><br><br>
