--- a/products/giant-reign-1.html
+++ b/products/giant-reign-1.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Giant Reign 1 (2016)</title>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="../css/style.css">
         <link href="https://fonts.googleapis.com/css?family=PT+Serif&subset=cyrillic-ext" rel="stylesheet">
     </head>
     <body>
@@ -25,10 +25,7 @@
             <img src="../img/reign-275-1.jpg" width="480px" alt="Giant Reign 1 (2016)">
         </a>
         <h2>Описание товара</h2>
-        <p>В&nbsp;основе этого агрессивного велосипеда лежит ALUXX&nbsp;SL-рама, переработанная с&nbsp;нуля
-        под 27.5-дюймовую технологию колеса. Фреймсет Reign&nbsp;27.5 задает технологиям аллюминиевых
-        полно-подвесных велосипедов новую планку веса, прочности и&nbsp;производительности,
-        используя максимум от&nbsp;этого превосходного размера колеса.</p>
+        <p>В&nbsp;основе этого агрессивного велосипеда лежит ALUXX&nbsp;SL-рама, переработанная с&nbsp;нуля под 27.5-дюймовую технологию колеса. Фреймсет Reign&nbsp;27.5 задает технологиям аллюминиевых полно-подвесных велосипедов новую планку веса, прочности и&nbsp;производительности, используя максимум от&nbsp;этого превосходного размера колеса.</p>
         <h2>Характеристики товара</h2>
         <ul>
             <h3>Рама</h3>
