Обернул смысловые блоки в section

--- a/products/giant-reign-1.html
+++ b/products/giant-reign-1.html
@@ -24,47 +24,53 @@
         <a href="../img/reign-275-1.jpg" target="_blank">
             <img src="../img/reign-275-1.jpg" width="480px" alt="Giant Reign 1 (2016)">
         </a>
-        <h2>Описание товара</h2>
-        <p>В&nbsp;основе этого агрессивного велосипеда лежит ALUXX&nbsp;SL-рама, переработанная с&nbsp;нуля под 27.5-дюймовую технологию колеса. Фреймсет Reign&nbsp;27.5 задает технологиям аллюминиевых полно-подвесных велосипедов новую планку веса, прочности и&nbsp;производительности, используя максимум от&nbsp;этого превосходного размера колеса.</p>
-        <h2>Характеристики товара</h2>
-        <ul>
-            <h3>Рама</h3>
-            <li>Размеры: S, M, L, XL</li>
-            <li>Цвета: Black/Charcoal</li>
-            <li>Конструкция: ALUXX SL-Grade Aluminum, 6.3"/160mm Maestro Suspension</li>
-            <li>Вилка: RockShox Pike RCT3 Solo Air, 160mm travel, 15mm Thru-Axle, Giant Custom 46mm Offset</li>
-            <li>Амортизатор: RockShox Monarch Plus Debonair RC3</li>
-            <h3>Компоненты</h3>
-            <li>Руль: Giant Contact SL DH, 800x31.8mm</li>
-            <li>Вынос: Truvativ Holzfeller (40-60mm)</li>
-            <li>Подседельный Штырь: RockShox Reverb Stealth, 30.9mm, 125mm (M-XL) 100mm (S)</li>
-            <li>Седло: Giant Contact SL Neutral, Ti rail</li>
-            <h3>Трансмиссия</h3>
-            <li>Манетки: SRAM X1 Trigger, Rear Only, 1x11</li>
-            <li>Задний: Переключатель SRAM X1, Type-2</li>
-            <li>Тормоза: SRAM Guide RS, [F] 200mm [R] 180mm</li>
-            <li>Тормозные Ручки: SRAM Guide RS</li>
-            <li>Кассета: SRAM XG1180 10-42, 11-speed</li>
-            <li>Цепь: KMC X11L</li>
-            <li>Система: SRAM X1, 32T w/ MRP AMG Guide</li>
-            <li>Каретка: SRAM Press Fit</li>
-            <h3>Колеса</h3>
-            <li>Обода: DT Swiss M 1700 Spline WheelSystem, 15mm front, 142x12 rear</li>
-            <li>Покрышки: Schwalbe Magic Mary 27.5x2.35" Snakeskin, TL Easy, Trail Star<br> 
-                [R] Schwalbe Hans Dampf 27.5x2.35" Snakeskin, TL Easy, Pace Star</li>
-        </ul>
-        <h2>Подробное описание</h2>
-        <ul>
-            <li>Активная и эффективная конструкция подвески Maestro оптимизирована для 27.5-дюймовых колесных</li>
-            <li>Стабильная 65-градусная геометрия headtube/seattube, низкий центр тяжести 
-                и более длинную колесную базу для бескомпромиссной езды</li>
-            <li>Воздушный или пружинный амортизатор в зависимости от конструкции рамы</li>
-        </ul>
-        <p>Сколько весит этот велосипед? Это частозадаваемый и&nbsp;правильный вопрос. Но&nbsp;на&nbsp;самом деле
-        в&nbsp;велосипедной промышленности нет единых стандартов для измерения веса велосипедов, и&nbsp;это часто приводит
-        к&nbsp;дезинформации. Общий вес велосипеда варьируется в&nbsp;зависимости от&nbsp;размера, материала рамы, покраски,
-        навесного оборудования и&nbsp;т.д. Мы&nbsp;в&nbsp;Giant считаем, что единственный верный способ узнать точный вес
-        того или иного велосипеда&nbsp;&mdash; обратиться в&nbsp;ближайший магазин Giant.</p>
+        <section class="short-description description">
+            <h2>Описание товара</h2>
+            <p>В&nbsp;основе этого агрессивного велосипеда лежит ALUXX&nbsp;SL-рама, переработанная с&nbsp;нуля под 27.5-дюймовую технологию колеса. Фреймсет Reign&nbsp;27.5 задает технологиям аллюминиевых полно-подвесных велосипедов новую планку веса, прочности и&nbsp;производительности, используя максимум от&nbsp;этого превосходного размера колеса.</p>
+        </section>
+        <section class="features description">
+            <h2>Характеристики товара</h2>
+            <ul>
+                <h3>Рама</h3>
+                <li>Размеры: S, M, L, XL</li>
+                <li>Цвета: Black/Charcoal</li>
+                <li>Конструкция: ALUXX SL-Grade Aluminum, 6.3"/160mm Maestro Suspension</li>
+                <li>Вилка: RockShox Pike RCT3 Solo Air, 160mm travel, 15mm Thru-Axle, Giant Custom 46mm Offset</li>
+                <li>Амортизатор: RockShox Monarch Plus Debonair RC3</li>
+                <h3>Компоненты</h3>
+                <li>Руль: Giant Contact SL DH, 800x31.8mm</li>
+                <li>Вынос: Truvativ Holzfeller (40-60mm)</li>
+                <li>Подседельный Штырь: RockShox Reverb Stealth, 30.9mm, 125mm (M-XL) 100mm (S)</li>
+                <li>Седло: Giant Contact SL Neutral, Ti rail</li>
+                <h3>Трансмиссия</h3>
+                <li>Манетки: SRAM X1 Trigger, Rear Only, 1x11</li>
+                <li>Задний: Переключатель SRAM X1, Type-2</li>
+                <li>Тормоза: SRAM Guide RS, [F] 200mm [R] 180mm</li>
+                <li>Тормозные Ручки: SRAM Guide RS</li>
+                <li>Кассета: SRAM XG1180 10-42, 11-speed</li>
+                <li>Цепь: KMC X11L</li>
+                <li>Система: SRAM X1, 32T w/ MRP AMG Guide</li>
+                <li>Каретка: SRAM Press Fit</li>
+                <h3>Колеса</h3>
+                <li>Обода: DT Swiss M 1700 Spline WheelSystem, 15mm front, 142x12 rear</li>
+                <li>Покрышки: Schwalbe Magic Mary 27.5x2.35" Snakeskin, TL Easy, Trail Star<br>
+                    [R] Schwalbe Hans Dampf 27.5x2.35" Snakeskin, TL Easy, Pace Star</li>
+            </ul>
+        </section>
+        <section class="detailed description description">
+            <h2>Подробное описание</h2>
+            <ul>
+                <li>Активная и эффективная конструкция подвески Maestro оптимизирована для 27.5-дюймовых колесных</li>
+                <li>Стабильная 65-градусная геометрия headtube/seattube, низкий центр тяжести
+                    и более длинную колесную базу для бескомпромиссной езды</li>
+                <li>Воздушный или пружинный амортизатор в зависимости от конструкции рамы</li>
+            </ul>
+            <p>Сколько весит этот велосипед? Это частозадаваемый и&nbsp;правильный вопрос. Но&nbsp;на&nbsp;самом деле
+            в&nbsp;велосипедной промышленности нет единых стандартов для измерения веса велосипедов, и&nbsp;это часто приводит
+            к&nbsp;дезинформации. Общий вес велосипеда варьируется в&nbsp;зависимости от&nbsp;размера, материала рамы, покраски,
+            навесного оборудования и&nbsp;т.д. Мы&nbsp;в&nbsp;Giant считаем, что единственный верный способ узнать точный вес
+            того или иного велосипеда&nbsp;&mdash; обратиться в&nbsp;ближайший магазин Giant.</p>
+        </section>
         <br><br>
         <hr>
         <br>
