Стилизовал характеристики товара, добавил изображение маркерам списка

--- a/products/nukeproof-mega-team.html
+++ b/products/nukeproof-mega-team.html
@@ -52,7 +52,7 @@
                <li>Вес: TBC</li>
             </ul>
         </section>
-        <section class="detailed-description">
+        <section class="detailed-description description">
             <h2>Подробное описание</h2>
             <p>С&nbsp;богатой историей в&nbsp;создании производительности горного велосипеда продукты, Nukeproof очень гордимся тем, чтобы представить свои самые убедительные все горные&nbsp;/ эндуро велосипед, созданный на&nbsp;сегодняшний день. Новый 2016&nbsp;MEGA.</p>
             <p>С&nbsp;1999 года печально известной Megavalanche гонки, которая начинается с&nbsp;самой высокой точки на&nbsp;Pic Blanc (3300м) над деревней Альп д&rsquo;Юэз является синонимом всей горной ездой и&nbsp;высочайший уровень истинного горного велосипеда гонок. Задуманный первоначально в&nbsp;2009 году командой разработчиков на&nbsp;Nukeproof в&nbsp;попытке построить идеальный велосипед для этого точного стиля гонок, Мега родился.</p>
