Стилизовано подробное описание товара

--- a/products/giant-reign-1.html
+++ b/products/giant-reign-1.html
@@ -57,7 +57,7 @@
                     [R] Schwalbe Hans Dampf 27.5x2.35" Snakeskin, TL Easy, Pace Star</li>
             </ul>
         </section>
-        <section class="detailed description description">
+        <section class="detailed-description description">
             <h2>Подробное описание</h2>
             <ul>
                 <li>Активная и эффективная конструкция подвески Maestro оптимизирована для 27.5-дюймовых колесных</li>
