Стилизовал подробное описание товара, добавил некоторые типографические символы на страницы

--- a/catalog.html
+++ b/catalog.html
@@ -27,6 +27,6 @@
         <a href="products/nukeproof-mega-team.html">Nukeproof Mega Team (2016)</a>
         <hr>
         <br>
-        © BikeGang, 2016. Все права защищены.
+        &copy; &laquo;BikeGang&raquo;, 2016. Все права защищены.
     </body>
 </html>
