--- a/products/giant-reign-1.html
+++ b/products/giant-reign-1.html
@@ -74,6 +74,6 @@
         <br><br>
         <hr>
         <br>
-        © «BikeGang», 2016. All rights fucked!
+        &copy; &laquo;BikeGang&raquo;, 2016. Все права защищены.
     </body>
 </html>
