--- a/products/nukeproof-mega-team.html
+++ b/products/nukeproof-mega-team.html
@@ -63,6 +63,6 @@
         <br>
         <hr>
         <br>
-        © «BikeGang», 2016. Все права защищены.
+        &copy; &laquo;BikeGang&raquo;, 2016. Все права защищены.
     </body>
 </html>
