--- a/catalog.html
+++ b/catalog.html
@@ -21,9 +21,9 @@
             </ul>
         </nav>
         <h1>Каталог</h1>
-        <img src="img/reign-275-1.jpg" alt="Giant Reign 1 (2016)" title="Giant Reign 1 (2016)" width="240"><br>
+        <a href="products/giant-reign-1.html"><img src="img/reign-275-1.jpg" alt="Giant Reign 1 (2016)" title="Giant Reign 1 (2016)" width="240"></a><br>
         <a href="products/giant-reign-1.html">Giant Reign 1 (2016)</a><br><br>
-        <img src="img/mega-275-team.jpg" alt="Nukeproof Mega Team (2016)" title="Nukeproof Mega Team (2016)" width="240"><br>
+        <a href="products/nukeproof-mega-team.html"><img src="img/mega-275-team.jpg" alt="Nukeproof Mega Team (2016)" title="Nukeproof Mega Team (2016)" width="240"></a><br>
         <a href="products/nukeproof-mega-team.html">Nukeproof Mega Team (2016)</a>
         <hr>
         <br>
