--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <p>Товарищ! Мы рады тебя приветствовать на сайте лучшего веломагазина.</p>
         <h2>Почему мы лучшие?</h2>
         <h3>Комплектующие от топовых производителей</h3>
-        <img src="img/manufacturers.jpg" width="480px" alt="Manufacturer's list" title="Круто!">
+        <img src="img/manufacturers.jpg" width="480px" height="257" alt="Manufacturer's list" title="Круто!">
         <p>Мы&nbsp;являемся официальным дилером многих известных брендов, поставляющих запчасти, в&nbsp;том числе редкие и&nbsp;топовые. Поэтому в&nbsp;качестве и&nbsp;надежности нашего товара нет никаких сомнений.</p>
         <h3>Пожизненная гарантия</h3>
         <p>Если вы&nbsp;покупаете велосипед в&nbsp;одном из&nbsp;наших магазинов, вы&nbsp;получаете пожизненную гарантию на&nbsp;раму. Например, если она треснула в&nbsp;момент использования, мы&nbsp;заменим её&nbsp;на&nbsp;новую, при этом все работы по&nbsp;снятию/установке комплектующих будут бесплатными.</p>
