--- a/products/giant-reign-1.html
+++ b/products/giant-reign-1.html
@@ -22,7 +22,7 @@
         </nav>
         <h1>Giant Reign 1 (2016)</h1>
         <a href="../img/reign-275-1.jpg" target="_blank">
-            <img src="../img/reign-275-1.jpg" width="480px" alt="Giant Reign 1 (2016)">
+            <img class="main-item-image" src="../img/reign-275-1.jpg" width="480px" height="320" alt="Giant Reign 1 (2016)" title="Giant Reign 1 (2016)">
         </a>
         <section class="short-description description">
             <h2>Описание товара</h2>
