--- a/products/nukeproof-mega-team.html
+++ b/products/nukeproof-mega-team.html
@@ -22,7 +22,7 @@
         </nav>
         <h1>Nukeproof Mega 275 Team (2016)</h1>
         <a href="../img/mega-275-team.jpg" target="_blank">
-            <img src="../img/mega-275-team.jpg" width="480px" alt="Nukeproof Mega 275 Team (2016)" title="Nukeproof Mega 275 Team (2016)">
+            <img class="main-item-image" src="../img/mega-275-team.jpg" width="480px" height="320" alt="Nukeproof Mega 275 Team (2016)" title="Nukeproof Mega 275 Team (2016)">
         </a>
         <section class="short-description description">
             <h2>Описание товара</h2>
