Добавил header и footer. Добавил логотип сайта

--- a/catalog.html
+++ b/catalog.html
@@ -7,26 +7,33 @@
         <link href="https://fonts.googleapis.com/css?family=PT+Serif&subset=cyrillic-ext" rel="stylesheet">
     </head>
     <body>
-        <nav class="main-menu">
-            <ul>
-                <li>
-                    <a href="index.html">Главная</a>
-                </li>
-                <li>
-                    <a href="#">Каталог</a>
-                </li>
-                <li>
-                    <a href="contacts.html">Контакты</a>
-                </li>
-            </ul>
-        </nav>
+        <header class="page-header">
+            <div class="logo">
+                <a href="index.html"><img src="img/bikegang-logo.png" alt="Bike Gang logo" title="Bike Gang"></a>
+            </div>
+            <nav class="main-menu">
+                <ul>
+                    <li>
+                        <a href="#">Главная</a>
+                    </li>
+                    <li>
+                        <a href="catalog.html">Каталог</a>
+                    </li>
+                    <li>
+                        <a href="contacts.html">Контакты</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
         <h1>Каталог</h1>
         <a href="products/giant-reign-1.html"><img src="img/reign-275-1.jpg" alt="Giant Reign 1 (2016)" title="Giant Reign 1 (2016)" width="240" height="160"></a><br>
         <a href="products/giant-reign-1.html">Giant Reign 1 (2016)</a><br><br>
         <a href="products/nukeproof-mega-team.html"><img src="img/mega-275-team.jpg" alt="Nukeproof Mega Team (2016)" title="Nukeproof Mega Team (2016)" width="240" height="160"></a><br>
         <a href="products/nukeproof-mega-team.html">Nukeproof Mega Team (2016)</a>
-        <hr>
-        <br>
-        &copy; &laquo;BikeGang&raquo;, 2016. Все права защищены.
+        <footer class="page-footer">
+            <div class="copyright">
+                &copy; &laquo;BikeGang&raquo;, 2016. Все права защищены.
+            </div>
+        </footer>
     </body>
 </html>
