--- a/contacts.html
+++ b/contacts.html
@@ -7,19 +7,24 @@
         <link href="https://fonts.googleapis.com/css?family=PT+Serif&subset=cyrillic-ext" rel="stylesheet">
     </head>
     <body>
-        <nav class="main-menu">
-            <ul>
-                <li>
-                    <a href="index.html">Главная</a>
-                </li>
-                <li>
-                    <a href="catalog.html">Каталог</a>
-                </li>
-                <li>
-                    <a href="#">Контакты</a>
-                </li>
-            </ul>
-        </nav>
+        <header class="page-header">
+            <div class="logo">
+                <a href="index.html"><img src="img/bikegang-logo.png" alt="Bike Gang logo" title="Bike Gang"></a>
+            </div>
+            <nav class="main-menu">
+                <ul>
+                    <li>
+                        <a href="#">Главная</a>
+                    </li>
+                    <li>
+                        <a href="catalog.html">Каталог</a>
+                    </li>
+                    <li>
+                        <a href="contacts.html">Контакты</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
         <h2>Напишите нам</h2>
         <form class="contact-us" action="http://geekbrains.ru" method="post" enctype="multipart/form-data">
             <fieldset>
@@ -43,8 +48,10 @@
         <p>Заказывайте любой товар, который есть в&nbsp;наличии, даже не&nbsp;выходя из&nbsp;дома и&nbsp;оплачивайте любым удобным для вас способом. Наши менеджеры сами свяжутся с&nbsp;вами и&nbsp;ответят на&nbsp;все вопросы, а&nbsp;после оплаты заказа, тщательно упакуют ваш товар и&nbsp;отправят его в&nbsp;любую точку России!</p>
         <br>
         <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=KZ06KogBmuO5fiy1vP2HIxlN6IRDv9g3&amp;width=100%&amp;height=240&amp;lang=ru_RU&amp;sourceType=constructor&amp;scroll=true"></script>
-        <hr>
-        <br>
-        &copy; &laquo;BikeGang&raquo;, 2016. Все права защищены.
+        <footer class="page-footer">
+            <div class="copyright">
+                &copy; &laquo;BikeGang&raquo;, 2016. Все права защищены.
+            </div>
+        </footer>
     </body>
 </html>
