--- a/index.html
+++ b/index.html
@@ -7,20 +7,24 @@
         <link href="https://fonts.googleapis.com/css?family=PT+Serif&subset=cyrillic-ext" rel="stylesheet">
     </head>
     <body>
-        <nav class="main-menu">
-            <ul>
-                <li>
-                    <a href="#">Главная</a>
-                </li>
-                <li>
-                    <a href="catalog.html">Каталог</a>
-                </li>
-                <li>
-                    <a href="contacts.html">Контакты</a>
-                </li>
-            </ul>
-        </nav>
-        <h1>BikeGang</h1>
+        <header class="page-header">
+            <div class="logo">
+                <img src="img/bikegang-logo.png" alt="Bike Gang logo" title="Bike Gang">
+            </div>
+            <nav class="main-menu">
+                <ul>
+                    <li>
+                        <a href="#">Главная</a>
+                    </li>
+                    <li>
+                        <a href="catalog.html">Каталог</a>
+                    </li>
+                    <li>
+                        <a href="contacts.html">Контакты</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
         <p>Товарищ! Мы рады тебя приветствовать на сайте лучшего веломагазина.</p>
         <h2>Почему мы лучшие?</h2>
         <h3>Комплектующие от топовых производителей</h3>
@@ -34,9 +38,10 @@
         <p>В&nbsp;магазинах &laquo;BikeGang&raquo; работают высококвалифицированные специалисты, настоящие фанаты своего дела, которые и&nbsp;сами увлечены активным спортом, а&nbsp;потому отлично понимают ваши потребности и&nbsp;всегда знают, как помочь. Они с&nbsp;радостью проконсультируют вас, помогут выбрать любой товар и&nbsp;дадут советы по&nbsp;уходу за&nbsp;ним.</p>
         <h3>Специальные условия для клиентов магазина</h3>
         <p>&laquo;Велобанда&raquo; любит и&nbsp;заботится о&nbsp;своих клиентах. Поэтому мы&nbsp;постоянно устраиваем акции и&nbsp;предоставляем особые условия нашим клиентам.</p>
-        <br><br>
-        <hr>
-        <br>
-        &copy; &laquo;BikeGang&raquo;, 2016. Все права защищены.
+        <footer class="page-footer">
+            <div class="copyright">
+                &copy; &laquo;BikeGang&raquo;, 2016. Все права защищены.
+            </div>
+        </footer>
     </body>
 </html>
