--- a/products/giant-reign-1.html
+++ b/products/giant-reign-1.html
@@ -7,19 +7,24 @@
         <link href="https://fonts.googleapis.com/css?family=PT+Serif&subset=cyrillic-ext" rel="stylesheet">
     </head>
     <body>
-        <nav class="main-menu">
-            <ul>
-                <li>
-                    <a href="../index.html">Главная</a>
-                </li>
-                <li>
-                    <a href="../catalog.html">Каталог</a>
-                </li>
-                <li>
-                    <a href="../contacts.html">Контакты</a>
-                </li>
-            </ul>
-        </nav>
+        <header class="page-header">
+            <div class="logo">
+                <a href="index.html"><img src="img/bikegang-logo.png" alt="Bike Gang logo" title="Bike Gang"></a>
+            </div>
+            <nav class="main-menu">
+                <ul>
+                    <li>
+                        <a href="#">Главная</a>
+                    </li>
+                    <li>
+                        <a href="catalog.html">Каталог</a>
+                    </li>
+                    <li>
+                        <a href="contacts.html">Контакты</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
         <h1>Giant Reign 1 (2016)</h1>
         <a href="../img/reign-275-1.jpg" target="_blank">
             <img class="main-item-image" src="../img/reign-275-1.jpg" width="480px" height="320" alt="Giant Reign 1 (2016)" title="Giant Reign 1 (2016)">
@@ -71,9 +76,10 @@
             навесного оборудования и&nbsp;т.д. Мы&nbsp;в&nbsp;Giant считаем, что единственный верный способ узнать точный вес
             того или иного велосипеда&nbsp;&mdash; обратиться в&nbsp;ближайший магазин Giant.</p>
         </section>
-        <br><br>
-        <hr>
-        <br>
-        &copy; &laquo;BikeGang&raquo;, 2016. Все права защищены.
+        <footer class="page-footer">
+            <div class="copyright">
+                &copy; &laquo;BikeGang&raquo;, 2016. Все права защищены.
+            </div>
+        </footer>
     </body>
 </html>
