--- a/products/nukeproof-mega-team.html
+++ b/products/nukeproof-mega-team.html
@@ -7,19 +7,24 @@
         <link href="https://fonts.googleapis.com/css?family=PT+Serif&subset=cyrillic-ext" rel="stylesheet">
     </head>
     <body>
-        <nav class="main-menu">
-            <ul>
-                <li>
-                    <a href="../index.html">Главная</a>
-                </li>
-                <li>
-                    <a href="../catalog.html">Каталог</a>
-                </li>
-                <li>
-                    <a href="../contacts.html">Контакты</a>
-                </li>
-            </ul>
-        </nav>
+        <header class="page-header">
+            <div class="logo">
+                <a href="index.html"><img src="img/bikegang-logo.png" alt="Bike Gang logo" title="Bike Gang"></a>
+            </div>
+            <nav class="main-menu">
+                <ul>
+                    <li>
+                        <a href="#">Главная</a>
+                    </li>
+                    <li>
+                        <a href="catalog.html">Каталог</a>
+                    </li>
+                    <li>
+                        <a href="contacts.html">Контакты</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
         <h1>Nukeproof Mega 275 Team (2016)</h1>
         <a href="../img/mega-275-team.jpg" target="_blank">
             <img class="main-item-image" src="../img/mega-275-team.jpg" width="480px" height="320" alt="Nukeproof Mega 275 Team (2016)" title="Nukeproof Mega 275 Team (2016)">
@@ -59,10 +64,10 @@
             <p>Изысканная и&nbsp;улучшилось с&nbsp;тех пор, Мега превратилась в&nbsp;идеальный все горы и&nbsp;эндуро гонки на&nbsp;велосипеде. Доступные в&nbsp;настоящее время как &laquo;вариант на&nbsp;каждый день гонщиков, которые хотят выдвинуть свои пределы, и&nbsp;150&nbsp;мм 29&raquo; 160мм 27.5 вариант для тех, у&nbsp;кого есть аппетит к&nbsp;отъявленные скорости на&nbsp;любой местности.</p>
             <p>Новые Mega команды уважают, и&nbsp;блюда из&nbsp;наград в&nbsp;spadefuls!</p>
         </section>
-        <br>
-        <br>
-        <hr>
-        <br>
-        &copy; &laquo;BikeGang&raquo;, 2016. Все права защищены.
+        <footer class="page-footer">
+            <div class="copyright">
+                &copy; &laquo;BikeGang&raquo;, 2016. Все права защищены.
+            </div>
+        </footer>
     </body>
 </html>
