Исправил ссылки в главном меню

--- a/products/nukeproof-mega-team.html
+++ b/products/nukeproof-mega-team.html
@@ -14,13 +14,13 @@
             <nav class="main-menu">
                 <ul>
                     <li>
-                        <a href="#">Главная</a>
+                        <a href="../ndex.html">Главная</a>
                     </li>
                     <li>
-                        <a href="catalog.html">Каталог</a>
+                        <a href="../catalog.html">Каталог</a>
                     </li>
                     <li>
-                        <a href="contacts.html">Контакты</a>
+                        <a href="../contacts.html">Контакты</a>
                     </li>
                 </ul>
             </nav>
