--- a/catalog.html
+++ b/catalog.html
@@ -14,10 +14,10 @@
             <nav class="main-menu">
                 <ul>
                     <li>
-                        <a href="#">Главная</a>
+                        <a href="index.html">Главная</a>
                     </li>
                     <li>
-                        <a href="catalog.html">Каталог</a>
+                        <a href="#">Каталог</a>
                     </li>
                     <li>
                         <a href="contacts.html">Контакты</a>
