Изменил цвет пунктов меню

--- a/catalog.html
+++ b/catalog.html
@@ -16,7 +16,7 @@
                     <li>
                         <a href="index.html">Главная</a>
                     </li>
-                    <li>
+                    <li class="active-page">
                         <a href="#">Каталог</a>
                     </li>
                     <li>
