--- a/contacts.html
+++ b/contacts.html
@@ -19,7 +19,7 @@
                     <li>
                         <a href="catalog.html">Каталог</a>
                     </li>
-                    <li>
+                    <li class="active-page">
                         <a href="#">Контакты</a>
                     </li>
                 </ul>
