--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             </div>
             <nav class="main-menu">
                 <ul>
-                    <li>
+                    <li class="active-page">
                         <a href="#">Главная</a>
                     </li>
                     <li>
