При вводе текста каждое слово начинается с большой буквы

--- a/contacts.html
+++ b/contacts.html
@@ -26,14 +26,14 @@
             </nav>
         </header>
         <h2>Напишите нам</h2>
-        <form class="contact-us" action="http://geekbrains.ru" method="post" enctype="multipart/form-data">
+        <form class="contact-us" action="http://geekbrains.ru" method="post">
             <fieldset>
                 <legend>Отправить сообщение</legend><br>
                 <input type="text" name="first-name" placeholder="Ваше имя"><br><br>
-                <input type="e-mail" name="e-mail" placeholder="Ваш e-mail"><br><br>
+                <input type="email" name="e-mail" placeholder="Ваш e-mail"><br><br>
                 <input type="text" name="message-theme" placeholder="Тема обращения"><br><br>
                 <textarea name="message" placeholder="Напишите ваше сообщение"></textarea><br><br>
-                <button type="submit">Отправить</button>
+                <button>Отправить</button>
             </fieldset>
         </form>
         <h2>Адрес</h2>
