--- a/products/nukeproof-mega-team.html
+++ b/products/nukeproof-mega-team.html
@@ -9,7 +9,7 @@
     <body>
         <header class="page-header">
             <div class="logo">
-                <a href="index.html"><img src="img/bikegang-logo.png" alt="Bike Gang logo" title="Bike Gang"></a>
+                <a href="index.html"><img src="../img/bikegang-logo.png" alt="Bike Gang logo" title="Bike Gang"></a>
             </div>
             <nav class="main-menu">
                 <ul>
